fixed popup on mobile

--- a/css/media/_media639.scss
+++ b/css/media/_media639.scss
@@ -193,6 +193,7 @@
             width: 100%;
         }
     }
+    
     /* order start */
     .order_inner {
         .order_props {
@@ -203,5 +204,16 @@
                 margin-bottom: 1em;
             }
         }
+    }
+
+    /* popup form */
+    .popup-form {
+        max-width: 98%;
+        left: 1%;
+        margin-left: 0;
+        padding: 3em 2em;
+    }
+    .popup-form .auth_page .return {
+        right: 1em;
     }
 }
